# zk-100

./: .gitignore  LICENSE  README.md  flake.nix
crates/exec/: Scarb.toml
crates/exec/src/: lib.cairo  main.cairo
crates/merkle_calc/: Scarb.toml
crates/merkle_calc/src/: main.cairo
crates/proof_io/: Scarb.toml
crates/proof_io/src/: hash.cairo  lib.cairo  public.cairo
crates/vm/: Scarb.toml
crates/vm/src/: check.cairo  inst.cairo  lib.cairo  state.cairo  step.cairo
frontend/: README.md  example_programs.md  tailwind.config.js
frontend/server/: index.js  index.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChallengeList.tsx  ChallengePage.tsx  DocsPanel.tsx  LogViewer.tsx  NodeEditor.tsx  NodeGrid.tsx  ResultDisplay.tsx
frontend/src/data/: challenges.ts  instructions.ts
frontend/src/types/: zk100.ts
frontend/src/utils/: api.ts  logger.ts  syntaxValidator.ts
host/: Cargo.toml  README.md  instruction_encoding_trace.md  test_program.asm
host/src/: assembler.rs  cairo_abi.rs  instruction.rs  main.rs  merkle.rs
host/test/: test_add_one.asm  test_direct_negate.asm  test_echo.asm  test_exact_match.asm  test_neg_one.asm  test_neg_zero.asm  test_negate.asm  test_output_42.asm  test_output_large.asm  test_simple.asm  test_simple_lit.asm  test_simple_negate.asm  test_sub_from_zero.asm
logic/: Scarb.toml
