[package]
name = "zk100-host"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
blake2 = "0.10"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"
starknet-crypto = "0.7"
starknet-types-core = "0.1"
